# bnb-fold

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: my_benchmark.rs
src/: lib.rs  main.rs  phrase_set.rs  rule.rs  solve.rs  string_handlers.rs
