[package]
name = "bnb-fold"
version = "0.1.0"
edition = "2021"


[dependencies]
itertools = "0.10.5"
maplit = "1.0.2"
nohash-hasher = "0.2.0"
rustc-hash = "1.1.0"
string-interner = "0.14.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
