[package]
name = "bnb-fold"
version = "0.1.0"
edition = "2021"


[dependencies]
bitvector = "0.1.5"
itertools = "0.10.5"
maplit = "1.0.2"
nohash-hasher = "0.2.0"
phf = "0.11.1"
rayon = "1.7.0"
rustc-hash = "1.1.0"
string-interner = "0.14.0"
tinyset = "0.4.15"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
lto = true
codegen-units = 1
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

