[package]
name = "bnb-fold"
version = "0.1.0"
edition = "2021"

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
itertools = "0.10.5"
ahash = "0.8.3"
nohash-hasher = "0.2.0"

[dependencies]
ahash = "0.8.3"
itertools = "0.10.5"
maplit = "1.0.2"
nohash-hasher = "0.2.0"
phf = "0.11.1"
rayon = "1.7.0"
string-interner = "0.14.0"
tinyset = "0.4.15"